<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Since this layout only contains vertically positioned simple views, no ConstraintLayout needed -->
<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".WelcomeFragment"
    android:layout_margin="8dp"
    >

    <TextView
        android:id="@+id/instruction_title_text"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/welcome_title_text"
        android:textSize="34sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/instruction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/instruction_title_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"

        />

</LinearLayout>
</layout>
